• https://github.com/vz-risk/veris/issues/373 - Add 'Offboarding' to internal discovery variety.
• https://github.com/vz-risk/veris/issues/369 - Attempted to fix typos. May require editing the webapp.
• https://github.com/vz-risk/veris/issues/310 - Updated actor definitions.
• https://github.com/vz-risk/veris/issues/280 - Updated physical in value_chain
• 
• 
• 




Version 1.3.5
=============
20-12-01

VERIS updates:
• Result description improved
• Included “credential stuffing” in definition of “use of stolen credentials”
• Added value_chain.NA for when no value_chain exists
• Added “partner” to value_chain.targeting and value_chain.distribution to capture ‘supply chain’ breaches.
• Added “In-memory” (only) to malware varieties.
• Added government levels to victim and made it mandatory. (Use “NA” if industry is not NAICS 92)
• Added cryptocurrencies to iso_currency_code fields.
• Fixed “malware.variety.Ram scraper” to “malware.variety.RAM scraper”
• Added “Web application” as vector for all possible actions.
• Renamed “action.social.vector.Website” to “action.social.vector.Web application”
• Renamed “action.malware.vector.Web download” and  “action.malware.vector.Web drive-by” to “action.malware.vector.Web application - download” and  “action.malware.vector.Web application - drive-by” and set both as children of new parent vector “action.malware.vector.Web application”
• Added “C2” to value_chain.development and “Direct” to value_chain.distribution
• Added “NA”, “Unknown”, “Other”, “Lateral-movement”, and “Deploy payload” to action result fields.  Removed “Infiltrate” from misuse result field.
• Updated definition of cloud NA to make it clear not to use it just because an asset is a user device.
• Updated value_chain.targeting to make it clear how to handle ‘targeted’ breaches.
• Corrected code for 142034 from southeast asia to south asia in region field definitions
• Added description to plus.master_id